# the-canons-mouth

./: .gitignore  README.md  Snakefile  config.yml  docker-compose.yml  environment.yml  package.json  process_texts.py
api/: routes.py  search.py
backend/: Dockerfile  Snakefile  config.json  process_texts.py  requirements.txt  utils.py
backend/api/: __init__.py  count_matches.sh  count_matches_list.sh  exact_match.sh  exact_match_list.sh  keepalive.py  profile.py  routes.py  search.py  text_info.py
backend/pyext-suffixtrie/: Cargo.toml
backend/pyext-suffixtrie/src/: lib.rs
backend/texts/: text_template.html
backend/texts/chapters/: bible.json  gibbons.json  shakespeare.json  wordsworth.json
backend/texts/raw/: aeneid.html  aeneid.txt  divine_comedy.html  (+30 more)
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  CanonText.js  Checkbox.js  CheckboxContainer.js  LoadingSpinner.js  ResultList.js  SearchApp.js  SearchPage.js  texts.js
public/: index.html
src/: App.css  App.js  CanonText.js  CheckboxContainer.js  ResultList.js  SearchApp.js  SearchBar.js  SearchPage.js  checkboxes.js  index.js  texts.js
src/texts/: mabinogion.js  paradise_regained.js
texts/: faerie_queen.html  faerie_queen.txt  iliad.html  iliad.txt  malory2.html  malory2.txt  odyssey.txt  paradise_lost.txt  paradise_regained.txt
texts/raw/: idylls_king.txt  mabinogion.txt  malory1.txt  odyssey.html  paradise_lost.html  paradise_regained.txt
texts/search/: mabinogion.txt  malory1.txt  malory2.txt  paradise_regained.txt
texts/tokenized/: odyssey.txt
(+319 files in other folders)
