[package]
name = "pyext_suffixtrie"
version = "0.1.0"
authors = ["Kath Nicholls <nichollskc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "suffixtrie"
crate-type = ["cdylib"]

[dependencies]
spyglass = "0.1.0" 
lazy_static = "1.4.0"
bincode = "1.3.1"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
